--- a/todomvc/imba-1.3.0/package.json
+++ b/todomvc/imba-1.3.0/package.json
@@ -4,7 +4,7 @@
     "imba": "1.3.0-beta.1"
   },
   "scripts": {
-  	"build": "./node_modules/.bin/imbapack",
-  	"watch": "./node_modules/.bin/imbapack --watch"
+  	"build": "imbapack",
+  	"watch": "imbapack --watch"
   }
 }
